--- a/app/globals.css
+++ b/app/globals.css
@@ -158,6 +158,10 @@ line-height: 44px;
     padding: 0px 3px;
   }
 
+  .section__title, .section__subtext {
+    font-size: 44px;
+  }
+
   .section__paragraph {
     width: 100%;
     padding: 0px 3px;
