--- a/components/Modal/PreviewImageFrame/previewImageFrame.module.css
+++ b/components/Modal/PreviewImageFrame/previewImageFrame.module.css
@@ -50,6 +50,7 @@
 
 @media only screen and (min-width: 475px) and (max-width: 1020px) {
   .image__previewLayout {
+    background-size: 100% 100%;
     background-attachment: fixed;
     height: 800px;
   }
