--- a/app/globals.css
+++ b/app/globals.css
@@ -146,6 +146,12 @@ line-height: 44px;
   }
 }
 
+/* @media (max-width: 384px) {
+    .section__title {
+        padding-top: 0rem;
+    }
+} */
+
 @media (min-width: 1024px) and (max-width: 1400px){
   .section__layout {
     width: 80% !important;
@@ -169,6 +175,7 @@ line-height: 44px;
   .section__paragraph {
     width: 100%;
     padding: 0px 3px;
+    line-height: 35px;
   }
 
   .button__layout {
@@ -188,6 +195,11 @@ line-height: 44px;
     background-image: none;
     height: auto;
     margin-top: 30px;
+  }
+
+  .button {
+    padding-left: 1.0rem;
+    padding-right: 1.0rem;
   }
 
   .hero__image > img {
